1-12-19
- hardware watchpoints
- optimized code inside breakpoint.c
- optimized code inside watchpoint.c
- safe_reprompt, hopefully prevents double readline prompts
- disable single stepping on detach so debuggee does not crash
- options to delete all breakpoints or watchpoints

1-11-19
- I realized I was interpreting the ARMv8 instruction set manual wrong and
found out you can access debug registers in EL0 through kernel APIs
(thread_get/set_state), so I implemented hardware breakpoints.
iosdbg falls back to software breakpoints when there's no more debug registers available.
- much better and cleaner mach_catch_exception_raise
- no more temp breakpoints to re-enable a previously hit breakpoint thanks to
MDSCR_EL1's single stepping bit
- lots and lots of cleanup

1-9-19
- breakpointing on a branch works fully now

1-8-19
- fixed up watchpoints
- greatly improved breakpoints, no more bp_manager_thread nonsense
- cmdfunc_watch implemented formally
- other small fixes + improvements
- kill command fixed
- bzero -> memset

1-3-19
- watchpoints
- memory leak fixed
- rewrote memutils_buffer_to_number

1-2-19
- breakpoints are completely fixed. You no longer are stuck hitting the same
breakpoint over and over again
- disassembler incorporated into other parts of iosdbg
- fixed some more buffer overflows

1-1-19
- implemented Armadillo and its corresponding command
- fixed tons of stack/heap overflows
- rewrote the memory dumper again (memutils_dump_memory_new)
- fixed the Makefile

11-16-18
- make code more concise with "handlers", debuggee function pointers that
keep clutter in another file

11-12-18
- pid_of_program more concise

11-11-18
- fixed return value of get_thread_name_from_thread_port
- functions with no parameters now take now parameters
- pid_of_program is about 1000x faster

11-10-18
- added this ChangeLog
- added structure to the source code directories
- a much better Makefile to go with new organization