@@ -12,15 +12,6 @@ typedef int cmd_error_t;
 #define CMD_SUCCESS (cmd_error_t)0
 #define CMD_FAILURE (cmd_error_t)1
 
-struct cmd_match_result_t {
-	int num_matches;
-	char *match;
-	struct dbg_cmd_t *matched_cmd;
-	char *matches;
-	int ambigious;
-	int perfect;
-};
-
 struct dbg_cmd_t {
 	const char *name;
 	const char *alias;
@@ -50,14 +41,14 @@ cmd_error_t cmdfunc_watch(const char *, int);
 cmd_error_t execute_command(char *);
 
 static struct dbg_cmd_t COMMANDS[] = {
-	{ "attach", NULL, cmdfunc_attach, "Attach to a program with its PID or executable name." },
 	{ "aslr", NULL, cmdfunc_aslr, "Show the ASLR slide." },
+	{ "attach", NULL, cmdfunc_attach, "Attach to a program with its PID or executable name." },
 	{ "backtrace", "bt", cmdfunc_backtrace, "Unwind the stack." },
 	{ "break", "b", cmdfunc_break, "Set a breakpoint.\n\n\tPass --no-aslr to keep ASLR from being added." },
 	{ "continue", "c", cmdfunc_continue, "Resume debuggee execution." },
 	{ "delete", "d", cmdfunc_delete, "Delete a breakpoint or a watchpoint via its ID. Syntax:\n\t(d|delete) <type> {id}\n\n\ttype: 'b' for breakpoint or 'w' for watchpoint.\n\tid: the *optional* id of the breakpoint or watchpoint you want to delete.\n\tIf you don't include it, you'll be given the option to delete all breakpoints or watchpoints." },
 	{ "detach", NULL, cmdfunc_detach, "Detach from the debuggee." },
-	{ "disassemble", "disas", cmdfunc_disassemble, "Disassemble memory from the debuggee. Syntax:\n\tdisassemble <location> <numlines>.\n\n\tPass --no-aslr to keep ASLR from being added to the location." },
+	{ "disassemble", "dis", cmdfunc_disassemble, "Disassemble memory from the debuggee. Syntax:\n\tdisassemble <location> <numlines>.\n\n\tPass --no-aslr to keep ASLR from being added to the location." },
 	{ "examine", "x", cmdfunc_examine, "Examine debuggee memory. Syntax:\n\t(examine|x) <location> <count>\n\n\tPass --no-aslr to keep ASLR from being added to the location." },
 	{ "help", NULL, cmdfunc_help, "Get help for a specific command." },
 	{ "kill", NULL, cmdfunc_kill, "Kill the debuggee." },
@@ -69,7 +60,8 @@ static struct dbg_cmd_t COMMANDS[] = {
 	{ "thread", NULL, NULL, NULL },
 	{ "thread list", NULL, cmdfunc_threadlist, "List threads from the debuggee." },
 	{ "thread select", NULL, cmdfunc_threadselect, "Select a thread to focus on." },
-	{ "watch", "w", cmdfunc_watch, "Set a watchpoint. Syntax:\n\twatch {type} <addr> <size>\n\n\ttype: what kind of access to <location> you want to watch for.\n\n\tvalid values: --r (read), --w (write), --rw (read/write).\n\n\tif no type is given, iosdbg defaults to --w.\n\n\taddr: the location to watch\n\tsize: the size, in bytes, of the data at location to watch" }
+	{ "watch", "w", cmdfunc_watch, "Set a watchpoint. Syntax:\n\twatch {type} <addr> <size>\n\n\ttype: what kind of access to <location> you want to watch for.\n\n\tvalid values: --r (read), --w (write), --rw (read/write).\n\n\tif no type is given, iosdbg defaults to --w.\n\n\taddr: the location to watch\n\tsize: the size, in bytes, of the data at location to watch" },
+	{ "", NULL, NULL, ""}
 };
 
 #endif
